packages/domain/tests/fixtures/negative/framework-side-effect.fixture.ts
import/* comment-separated-side-effect */"react";
export { createElement } from/* comment-separated-re-export */"react-dom";
